--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ section a:hover {
 	position: sticky;
 	background:#D3D3D3;
 	width: 68.5%;
-	height: auto;
+	height: 5000px auto;
 	padding: 10px;
 	margin: 10px auto 23px;
 	border: dashed #D2691E;
