--- a/style.css
+++ b/style.css
@@ -26,9 +26,8 @@ a:hover {
 }
 section {
 	position: sticky;
-	height: auto;
 	padding: 15px;
-	margin: 15px 0px 15px 0px;
+	margin: 15px auto 15px 0px;
 	width: 345px;
 	background: #CD853F;
 	left: 20px;
