--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
 .header_nav, .header-div {
-	position: absolute;
-	background: #fff;
+	position: fixed;
+	background: #F1F1ED;
 	height: 50px;
-	width: 99.2%;
+	width: 99%;
 	top: 0px;
 	left: 0px;
 	display: flex;
 	border: inset;
-	min-width: 300px;
+	min-width: 290px;
 }
 body {
-	background: rgb(0, 0, 0, .75);
+	background: rgb(0, 0, 0, .84);
+}
+header {
+	margin: 0px 0px 75px 0px;
+	min-width: 290px;
 }
 .zz {
 	color: grey;
@@ -29,15 +33,47 @@ footer {
 	top: 96.6%;
 }
 .razd {
-	background: #FFA07A;
-	position: sticky;
-	display: flex;
-	margin: 63px 60px 30px 60px;
-	padding: 7px 0;
+	background: #313742;
+	width: auto;
+	margin: 4px auto 15px;
+	box-shadow: 0px 0px 10px 3px rgb(16,7,2, .78);
+	border-radius: 7px;
+	min-width: 300px;
 	height: auto;
-	min-width: 200px;
+}
+.d-razd {
+	position: static;
+	background: linear-gradient(91.21deg, #00C2FF 0%, rgba(0, 10, 255, 0.6) 100%);
+	top: 0px;
+	border-top-right-radius: 7px;
+	border-top-left-radius: 7px;
+	width: auto;
+	min-width: 300px;
+	color: #e0e6f0;
 	font-size: 20px;
-	border: dotted 2px #00FF00;
+	height: auto;
+	margin: 0px 0px 10px;
+}
+.dd-razd {
+	padding: 5px;
+	margin: 3px 0px;
+	border-bottom: 1px solid rgb(0,0,0, .2);
+}
+.s-razd {
+	color: #e0e6f0;
+	font-size: 18px;
+	margin: 10px 0px 11px 4px;
+	padding: 3px;
+	text-align: center;
+}
+.s-razd a {
+	color: #e0e6f0;
+}
+.s-razd:hover {
+	margin: 0px 0px 0px 5px;
+}
+.s-razd a:hover {
+	color: #c9f9f9;
 }
 a:hover {
 	text-decoration: underline;
@@ -85,15 +121,15 @@ a:hover {
 }
 .ct {
 	position: relative;
-	margin: 7px;
-	width: 96.5%;
+	margin: 7px 7px 7px 1px;
+	width: 98.5%;
 	min-height: 55px;
 	background: #1E90FF;
 	border-radius: 10px;
 	padding: 2px;
 	height: auto;
-	min-width: 300px
-
+	min-width: 300px;
+	box-shadow: 0px 0px 10px 3px rgb(16,7,2, .78);
 }
 .d-ct {
 	position: static;
