--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ footer {
 	padding: 5px;
 	margin: 3px 0px;
 	border-bottom: 1px solid rgb(0,0,0, .2);
+	font-family: 'Kanit', sans-serif;
 }
 .s-razd {
 	color: #e0e6f0;
