--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@300&family=Open+Sans:ital,wght@0,300;1,300&family=Work+Sans:ital,wght@0,300;1,300&display=swap');
 .header_nav, .header-div {
 	position: fixed;
 	background: #F1F1ED;
@@ -8,6 +9,7 @@
 	display: flex;
 	border: inset;
 	min-width: 290px;
+	font-family: 'Open Sans', sans-serif;
 }
 body {
 	background: rgb(0, 0, 0, .84);
@@ -30,7 +32,9 @@ a {
 }
 footer {
 	position: fixed;
-	top: 97.4%;
+	bottom: 1px;
+	right: 4px;
+	font-family: 'Work Sans', sans-serif;
 }
 .razd {
 	background: #313742;
@@ -53,12 +57,13 @@ footer {
 	font-size: 20px;
 	height: auto;
 	margin: 0px 0px 10px;
+	font-family: 'Karla', sans-serif;
 }
 .dd-razd {
 	padding: 5px;
 	margin: 3px 0px;
 	border-bottom: 1px solid rgb(0,0,0, .2);
-	font-family: 'Kanit', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 .s-razd {
 	color: #e0e6f0;
@@ -79,19 +84,6 @@ footer {
 a:hover {
 	text-decoration: underline;
 	color: #FF4500;
-}
-.lins {
-	border: none;
-	display: flex;
-	background: #9370DB;
-	border-radius: 6px;
-	font-size: 18px;
-	max-width: 700px;
-	padding: 6px 10px;
-	margin: 3px 70px 5px;
-	min-width: 180px;
-	height: auto;
-	border: groove #00FF00;
 }
 .header_nav, .linss, a:hover {
 	text-decoration: none;
@@ -131,6 +123,7 @@ a:hover {
 	height: auto;
 	min-width: 300px;
 	box-shadow: 0px 0px 10px 3px rgb(16,7,2, .78);
+	font-size: 14px;
 }
 .d-ct {
 	position: static;
@@ -143,6 +136,7 @@ a:hover {
 	border-bottom-right-radius: 10px;
 	border-top-right-radius: 10px;
 	min-height: 55px;
+	font-family: 'Work Sans', sans-serif;
 }
 .z-ct, .z-ct-1 {
 	color:  #e0e6f0;
@@ -151,9 +145,10 @@ a:hover {
 	width: auto;
 	margin: 0px auto;
 	padding: 2px;
-	font-size: 17px;
+	font-size: 18px;
 	background: #1E90FF;
 	border-radius: 10px;
+	font-family: 'Karla', sans-serif;
 }
 .z-ct-1 {
 	margin: 15px 0px;
