--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ footer {
 	color: #e0e6f0;
 	font-size: 20px;
 	height: auto;
-	margin: 0px 0px 10px;
+	margin: 0px;
 	font-family: 'Karla', sans-serif;
 }
 .dd-razd {
