--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ a {
 	color: #00FF7F;
 }
 footer {
+        position: absolute;
 	bottom: 1px;
 	right: 4px;
 	font-family: 'Work Sans', sans-serif;
