--- a/style.css
+++ b/style.css
@@ -71,14 +71,14 @@ footer {
 	margin: 10px 0px 11px 4px;
 	padding: 3px;
 	text-align: center;
-        transition: 0.3s;
+        transition: 0.5s ease-out;
 }
 .s-razd a {
 	color: #e0e6f0;
 }
 .s-razd a:hover {
+        transform: translate (6px, 0px);
 	color: #c9f9f9;
-        transform: translateX(6px);
 }
 a:hover {
 	text-decoration: underline;
