--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ a {
 	color: #00FF7F;
 }
 footer {
-        position: fixed;
+	position: fixed;
 	bottom: 1px;
 	right: 4px;
 	font-family: 'Work Sans', sans-serif;
@@ -71,13 +71,13 @@ footer {
 	margin: 10px 0px 11px 4px;
 	padding: 3px;
 	text-align: center;
-        transition: 0.5s ease-out;
-}
-.s-razd:hover {
-transform: translate(20px);
 }
 .s-razd a {
 	color: #e0e6f0;
+	transition: 0.5s;
+}
+.s-razd:hover {
+	margin: 0px 0px 0px 5px;
 }
 .s-razd a:hover {
 	color: #c9f9f9;
@@ -115,7 +115,7 @@ a:hover {
 }
 .ct {
 	position: static;
-	margin: 7px 1px 8px 1px;
+	margin: 7px 1px 15px -3px;
 	width: 99.5%;
 	min-height: 55px;
 	background: #1E90FF;
@@ -129,11 +129,11 @@ a:hover {
 .d-ct {
 	position: static;
 	width: auto;
-	padding: 9px 10px;
+	padding: 9px 15px;
 	height: auto;
 	background: #313742;
 	color: #e0e6f0;
-	margin: 0px 0px 0px 25px;
+	margin: 0px 0px 0px 1%;
 	border-bottom-right-radius: 10px;
 	border-top-right-radius: 10px;
 	min-height: 55px;
