--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 	font-family: 'Open Sans', sans-serif;
 }
 body {
-	background: rgb(0, 0, 0, .84);
+	background: #070d19;
 }
 header {
 	margin: 0px 0px 75px 0px;
@@ -37,7 +37,7 @@ footer {
 	font-family: 'Work Sans', sans-serif;
 }
 .razd {
-	background: #313742;
+	background: #0c1427;
 	width: auto;
 	margin: 4px auto 15px;
 	box-shadow: 0px 0px 10px 3px rgb(16,7,2, .78);
@@ -131,7 +131,7 @@ a:hover {
 	width: auto;
 	padding: 9px 15px;
 	height: auto;
-	background: #313742;
+	background: #12151A;
 	color: #e0e6f0;
 	margin: 0px 0px 0px 1%;
 	border-bottom-right-radius: 10px;
