--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ a:hover {
 	width: auto;
 	padding: 9px 15px;
 	height: auto;
-	background: #12151A;
+	background: #292e39;
 	color: #e0e6f0;
 	margin: 0px 0px 0px 1%;
 	border-bottom-right-radius: 10px;
@@ -219,7 +219,7 @@ li:empty::before {
 }
 .perevod td {
 	border: 1.5px solid #4682B4;
-	padding: 2px;
+	padding: 2px 3px;
 	color: #FFB6C1;
 }
 .perevod caption {
